<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                tools:context=".MainActivity">



            <TextView
                android:id="@+id/startLocationTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startLocation"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:id="@+id/startLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:hint="Some text"
                android:lineSpacingExtra="0dp"
                android:layout_toRightOf="@+id/startLocationTxtView"
                android:inputType="text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_toRightOf="@+id/startLocation"
                android:src="@drawable/my_ic_location"/>



    <!--        Segunda Linha       !-->
            <TextView
                android:id="@+id/endLocationTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/endLocation"
                android:layout_below="@+id/startLocationTxtView"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:id="@+id/endLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Some Text"
                android:layout_toRightOf="@id/endLocationTxtView"
                android:layout_below="@+id/startLocation"
                android:inputType="text"/>


        <Button
            android:id="@+id/goButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/endLocationTxtView"
            android:text="@string/go"/>


</RelativeLayout>
