<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <!-- Add the toolbar !-->
    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/activityMainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar">

        <TableLayout
            android:id="@+id/startJourneyLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="@dimen/main_activity_vertical_margin_between_components">

                <EditText
                    android:id="@+id/startLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:hint="@string/hint_start_journey"
                    android:inputType="text"
                    android:lineSpacingExtra="0dp"/>

                <ImageView
                    android:id="@+id/gpsIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:src="@drawable/my_location2_t_copy"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/main_activity_vertical_margin_between_go_button_and_components"
                android:paddingTop="@dimen/main_activity_vertical_margin_between_components">

                <EditText
                    android:id="@+id/endLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:hint="@string/hint_end_journey"
                    android:inputType="text"/>

            </TableRow>

            <Button
                android:id="@+id/goButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/custom_button_green_border"
                android:text="@string/go"
                android:textColor="@color/ridemePrimaryBackgroundColor"
                android:textSize="19sp"/>

        </TableLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/pricesAreEstimated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityMainRelativeLayout"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textSize="9sp"
            android:text="All prices are an estimation of the total price."/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/supportedLocations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pricesAreEstimated"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="20dp"
            android:textSize="11sp"
            android:text="Supported Locations by "/>

        <TextView
            android:id="@+id/taxifarestandLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="TaxiFareFinder"
            android:textSize="11sp"
            android:textColor="#ffc20e"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textSize="11sp"
            android:text=" and "/>

        <TextView
            android:id="@+id/uberLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textSize="11sp"
            android:textColor="#2E2E3C"
            android:text="Uber"/>

    </LinearLayout>

</RelativeLayout>
