<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dazito.android.rideme.gui.fragments.RouteFragment">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:clickable="false"
        sothree:umanoPanelHeight="50dp"
        sothree:umanoShadowHeight="4dp">


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:tools="http://schemas.android.com/tools"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:text="$0"
                    android:transitionName="@string/priceTransition"
                    android:textColor="@color/ridemeColorBackgroundAccent"
                    android:textSize="45sp"/>

                <TextView
                    android:id="@+id/displayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/price"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:textColor="@color/ridemePrimaryTextColor"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/displayName"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:textColor="@color/ridemePrimaryTextColor"/>

                <TableLayout
                    android:id="@+id/fromTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description"
                    android:paddingBottom="15dp"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/pickup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/pickup_location"
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/startLocationAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxEms="2"
                            android:paddingTop="5dp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/dropOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:text="@string/drop_off"
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/endLocationAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxEms="2"
                            android:paddingTop="5dp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"/>
                    </TableRow>

                </TableLayout>


                <TableLayout
                    android:id="@+id/serviceDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fromTo"
                    android:paddingBottom="30dp"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/pickupInTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="Pick Up In: "
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/pickupInValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxEms="2"
                            android:paddingBottom="5dp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"/>


                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/capacity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/capacity"
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/capacityValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="Distance:"
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/distanceValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:text="Duration:"
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/durationValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/surgeMultiplierTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="Surge Multiplier: "
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/surgeMultiplierValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/rateAreaTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="Rate Area: "
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/rateAreaValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/initialFareTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="Initial Fare: "
                            android:textColor="@color/ridemePrimaryTextColor"/>


                        <TextView
                            android:id="@+id/initialFareValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/meteredFareTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="Metered Fare: "
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/meteredFareValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tipAmountTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tip Amount: "
                            android:textColor="@color/ridemePrimaryTextColor"/>

                        <TextView
                            android:id="@+id/tipAmountValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>


                </TableLayout>

                <!--
                <Button
                    android:id="@+id/book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/serviceDetails"
                    android:background="@drawable/custom_button_green_border"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/book"/>
                    !-->
            </RelativeLayout>
        </ScrollView>


        <!-- Sliding panel !-->

        <LinearLayout
            android:id="@+id/dragView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ridemeColorBackgroundAccent"
            android:clickable="false"
            android:focusable="false"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TableRow>

                        <Button
                            android:id="@+id/showMap"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/custom_button_nocolor_border"
                            android:paddingLeft="10dp"
                            android:text="@string/show_map"/>

                        <TextView
                            android:id="@+id/dummyButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/ridemeColorBackgroundAccent"/>

                        <Button
                            android:id="@+id/bookMapBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_button_nocolor_border"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="Book"/>

                    </TableRow>
                </TableLayout>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/googleMap"
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    map:uiZoomControls="true"/>

            </LinearLayout>

        </LinearLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
</LinearLayout>